# svo

./: .gitmodules  CMakeLists.txt  README.md
include/svo/: depth_filter.h  global.h  monocular_svo.h
src/: config.cpp  frame_handler_mono.cpp  monocular_svo.cpp
test/: test_utils.h
